--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -155,7 +155,8 @@ jobs:
           # Only commit and push if there are changes
           if ! git diff --staged --quiet; then
             git commit -m "chore: update frontend scan reports"
-            git pull --rebase origin dev
+            CURRENT_BRANCH=$(git rev-parse --abbrev-ref HEAD)
+            git pull --rebase origin "$CURRENT_BRANCH" || git push
             git push
           else
             echo "No changes to scan reports, skipping commit"
@@ -330,7 +331,8 @@ jobs:
           # Only commit and push if there are changes
           if ! git diff --staged --quiet; then
             git commit -m "chore: update backend scan reports"
-            git pull --rebase origin dev
+            CURRENT_BRANCH=$(git rev-parse --abbrev-ref HEAD)
+            git pull --rebase origin "$CURRENT_BRANCH" || git push
             git push
           else
             echo "No changes to scan reports, skipping commit"
@@ -408,7 +410,8 @@ jobs:
           
           git add Project/helm/devops-app/values.yaml
           git diff --staged --quiet || git commit -m "chore: update image tags to new versions"
-          git pull --rebase origin dev
+          CURRENT_BRANCH=$(git rev-parse --abbrev-ref HEAD)
+          git pull --rebase origin "$CURRENT_BRANCH" || git push
           git push
 
   argocd-sync:
