--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -155,9 +155,7 @@ jobs:
           # Only commit and push if there are changes
           if ! git diff --staged --quiet; then
             git commit -m "chore: update frontend scan reports"
-            CURRENT_BRANCH=$(git rev-parse --abbrev-ref HEAD)
-            git pull --rebase origin "$CURRENT_BRANCH" || git push
-            git push
+            git push origin HEAD:${{ github.ref_name }}
           else
             echo "No changes to scan reports, skipping commit"
           fi
@@ -331,9 +329,7 @@ jobs:
           # Only commit and push if there are changes
           if ! git diff --staged --quiet; then
             git commit -m "chore: update backend scan reports"
-            CURRENT_BRANCH=$(git rev-parse --abbrev-ref HEAD)
-            git pull --rebase origin "$CURRENT_BRANCH" || git push
-            git push
+            git push origin HEAD:${{ github.ref_name }}
           else
             echo "No changes to scan reports, skipping commit"
           fi
@@ -409,10 +405,10 @@ jobs:
           fi
           
           git add Project/helm/devops-app/values.yaml
-          git diff --staged --quiet || git commit -m "chore: update image tags to new versions"
-          CURRENT_BRANCH=$(git rev-parse --abbrev-ref HEAD)
-          git pull --rebase origin "$CURRENT_BRANCH" || git push
-          git push
+          if ! git diff --staged --quiet; then
+            git commit -m "chore: update image tags to new versions"
+            git push origin HEAD:${{ github.ref_name }}
+          fi
 
   argocd-sync:
     needs: [update-helm-values]
