--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -155,7 +155,7 @@ jobs:
           # Only commit and push if there are changes
           if ! git diff --staged --quiet; then
             git commit -m "chore: update frontend scan reports"
-            git push origin HEAD:${{ github.ref_name }}
+            git push
           else
             echo "No changes to scan reports, skipping commit"
           fi
@@ -329,7 +329,7 @@ jobs:
           # Only commit and push if there are changes
           if ! git diff --staged --quiet; then
             git commit -m "chore: update backend scan reports"
-            git push origin HEAD:${{ github.ref_name }}
+            git push
           else
             echo "No changes to scan reports, skipping commit"
           fi
@@ -407,7 +407,7 @@ jobs:
           git add Project/helm/devops-app/values.yaml
           if ! git diff --staged --quiet; then
             git commit -m "chore: update image tags to new versions"
-            git push origin HEAD:${{ github.ref_name }}
+            git push
           fi
 
   argocd-sync:
